--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- icons bootstrep -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Portifólio Luiz Carlos</title>
 </head>
 <body>
     <header>
         <div class="interface">
             <div class="logo">
-                <img src="assets/img/logo-branco.jpg" width="150px"alt="Logo Luiz">
+                <img src="logo-branco.jpg" width="150px"alt="Logo Luiz">
             </div><!-- logo -->
 
             <nav class="menu-desktop">
@@ -55,7 +55,7 @@
                     </div> <!--txt-topo-site-->
                         
                     <div class="img-topo-site">
-                        <img src="assets/img/luiz.jpg" alt="">
+                        <img src="luiz.jpg" alt="">
                     </div><!--img-topo-site-->
                 </div> <!--flex-->
             </div> <!--interface-->
@@ -103,7 +103,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="assets/img/luiz.jpg" width="400px" alt="">
+                        <img src="luiz.jpg" width="400px" alt="">
                     </div>
                     <div class="txt-sobre">
                         <h2>
