--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
                 </h2>
 
                 <div class="flex">
-                    <div class="img-port" style="background-image: url(assets/img/imagem.jpg);">
+                    <div class="img-port" style="background-image: url(imagem.jpg);">
                         <div class="overlay">
                             Projeto1
                         </div>
                     </div>
-                    <div class="img-port" style="background-image: url(assets/img/imagem.jpg);">
+                    <div class="img-port" style="background-image: url(imagem.jpg);">
                         <div class="overlay">
                             Projeto2
                         </div>
                     </div>
-                    <div class="img-port" style="background-image: url(assets/img/imagem.jpg);">
+                    <div class="img-port" style="background-image: url(imagem.jpg);">
                         <div class="overlay">
                             Projeto3
                         </div>
